// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BooksPaginator /> Should render as expected 1`] = `
<div
  className="search-modal__book-paginator"
>
  <ul
    className="book-paginator__navigator"
  >
    <li
      className="book-paginator__navigator-item"
      key="first"
    >
      <div
        tabIndex="-1"
      >
        First
      </div>
    </li>
    /
    <li
      className="book-paginator__navigator-item"
      key="prev"
    >
      <div
        tabIndex="-1"
      >
        Previous
      </div>
    </li>
    <li
      className="book-paginator__navigator-item"
      key="0"
    >
      <div
        className="result"
        tabIndex="-1"
      >
        1
      </div>
    </li>
    <li
      className="book-paginator__navigator-item"
      key="1"
    >
      <div
        className="book-paginator__navigator-item-div"
        onClick={[Function]}
        role="button"
        tabIndex="-1"
      >
        2
      </div>
    </li>
    <li
      className="book-paginator__navigator-item"
      key="2"
    >
      <div
        className="book-paginator__navigator-item-div"
        onClick={[Function]}
        role="button"
        tabIndex="-1"
      >
        3
      </div>
    </li>
    <li
      className="book-paginator__navigator-item"
      key="3"
    >
      <div
        className="book-paginator__navigator-item-div"
        onClick={[Function]}
        role="button"
        tabIndex="-1"
      >
        4
      </div>
    </li>
    <li
      className="book-paginator__navigator-item"
      key="4"
    >
      <div
        className="book-paginator__navigator-item-div"
        onClick={[Function]}
        role="button"
        tabIndex="-1"
      >
        5
      </div>
    </li>
    <li
      className="book-paginator__navigator-item"
      key="5"
    >
      <div
        className="book-paginator__navigator-item-div"
        onClick={[Function]}
        role="button"
        tabIndex="-1"
      >
        6
      </div>
    </li>
    <li
      className="book-paginator__navigator-item"
      key="6"
    >
      <div
        className="book-paginator__navigator-item-div"
        onClick={[Function]}
        role="button"
        tabIndex="-1"
      >
        7
      </div>
    </li>
    <li
      className="book-paginator__navigator-item"
      key="7"
    >
      <div
        className="book-paginator__navigator-item-div"
        onClick={[Function]}
        role="button"
        tabIndex="-1"
      >
        8
      </div>
    </li>
    <li
      className="book-paginator__navigator-item"
      key="8"
    >
      <div
        className="book-paginator__navigator-item-div"
        onClick={[Function]}
        role="button"
        tabIndex="-1"
      >
        9
      </div>
    </li>
    <li
      className="book-paginator__navigator-item"
      key="9"
    >
      <div
        className="book-paginator__navigator-item-div"
        onClick={[Function]}
        role="button"
        tabIndex="-1"
      >
        10
      </div>
    </li>
    <li
      className="book-paginator__navigator-item"
      key="next"
    >
      <div
        className="book-paginator__navigator-item-div"
        onClick={[Function]}
        role="button"
        tabIndex="-1"
      >
        Next
      </div>
    </li>
    /
    <li
      className="book-paginator__navigator-item"
      key="last"
    >
      <div
        className="book-paginator__navigator-item-div"
        onClick={[Function]}
        role="button"
        tabIndex="-1"
      >
        Last
      </div>
    </li>
  </ul>
</div>
`;

exports[`<BooksPaginator /> Should render as expected 2`] = `
<div
  className="search-modal__book-paginator"
>
  <ul
    className="book-paginator__navigator"
  >
    <li
      className="book-paginator__navigator-item"
      key="first"
    >
      <div
        className="book-paginator__navigator-item-div"
        onClick={[Function]}
        role="button"
        tabIndex="-1"
      >
        First
      </div>
    </li>
    /
    <li
      className="book-paginator__navigator-item"
      key="prev"
    >
      <div
        className="book-paginator__navigator-item-div"
        onClick={[Function]}
        role="button"
        tabIndex="-1"
      >
        Previous
      </div>
    </li>
    <li
      className="book-paginator__navigator-item"
      key="1"
    >
      <div
        className="book-paginator__navigator-item-div"
        onClick={[Function]}
        role="button"
        tabIndex="-1"
      >
        2
      </div>
    </li>
    <li
      className="book-paginator__navigator-item"
      key="2"
    >
      <div
        className="book-paginator__navigator-item-div"
        onClick={[Function]}
        role="button"
        tabIndex="-1"
      >
        3
      </div>
    </li>
    <li
      className="book-paginator__navigator-item"
      key="3"
    >
      <div
        className="book-paginator__navigator-item-div"
        onClick={[Function]}
        role="button"
        tabIndex="-1"
      >
        4
      </div>
    </li>
    <li
      className="book-paginator__navigator-item"
      key="4"
    >
      <div
        className="book-paginator__navigator-item-div"
        onClick={[Function]}
        role="button"
        tabIndex="-1"
      >
        5
      </div>
    </li>
    <li
      className="book-paginator__navigator-item"
      key="5"
    >
      <div
        className="book-paginator__navigator-item-div"
        onClick={[Function]}
        role="button"
        tabIndex="-1"
      >
        6
      </div>
    </li>
    <li
      className="book-paginator__navigator-item"
      key="6"
    >
      <div
        className="book-paginator__navigator-item-div"
        onClick={[Function]}
        role="button"
        tabIndex="-1"
      >
        7
      </div>
    </li>
    <li
      className="book-paginator__navigator-item"
      key="7"
    >
      <div
        className="book-paginator__navigator-item-div"
        onClick={[Function]}
        role="button"
        tabIndex="-1"
      >
        8
      </div>
    </li>
    <li
      className="book-paginator__navigator-item"
      key="8"
    >
      <div
        className="book-paginator__navigator-item-div"
        onClick={[Function]}
        role="button"
        tabIndex="-1"
      >
        9
      </div>
    </li>
    <li
      className="book-paginator__navigator-item"
      key="9"
    >
      <div
        className="result"
        tabIndex="-1"
      >
        10
      </div>
    </li>
    <li
      className="book-paginator__navigator-item"
      key="10"
    >
      <div
        className="book-paginator__navigator-item-div"
        onClick={[Function]}
        role="button"
        tabIndex="-1"
      >
        11
      </div>
    </li>
    <li
      className="book-paginator__navigator-item"
      key="next"
    >
      <div
        className="book-paginator__navigator-item-div"
        onClick={[Function]}
        role="button"
        tabIndex="-1"
      >
        Next
      </div>
    </li>
    /
    <li
      className="book-paginator__navigator-item"
      key="last"
    >
      <div
        className="book-paginator__navigator-item-div"
        onClick={[Function]}
        role="button"
        tabIndex="-1"
      >
        Last
      </div>
    </li>
  </ul>
</div>
`;

exports[`<BooksPaginator /> When PageCount is 0 Should render as expected 1`] = `""`;

exports[`<BooksPaginator /> When PageCount is 2 and current page is first page Should render as expected 1`] = `
<div
  className="search-modal__book-paginator"
>
  <ul
    className="book-paginator__navigator"
  >
    <li
      className="book-paginator__navigator-item"
      key="first"
    >
      <div
        tabIndex="-1"
      >
        First
      </div>
    </li>
    /
    <li
      className="book-paginator__navigator-item"
      key="prev"
    >
      <div
        tabIndex="-1"
      >
        Previous
      </div>
    </li>
    <li
      className="book-paginator__navigator-item"
      key="0"
    >
      <div
        className="result"
        tabIndex="-1"
      >
        1
      </div>
    </li>
    <li
      className="book-paginator__navigator-item"
      key="1"
    >
      <div
        className="book-paginator__navigator-item-div"
        onClick={[Function]}
        role="button"
        tabIndex="-1"
      >
        2
      </div>
    </li>
    <li
      className="book-paginator__navigator-item"
      key="next"
    >
      <div
        className="book-paginator__navigator-item-div"
        onClick={[Function]}
        role="button"
        tabIndex="-1"
      >
        Next
      </div>
    </li>
    /
    <li
      className="book-paginator__navigator-item"
      key="last"
    >
      <div
        className="book-paginator__navigator-item-div"
        onClick={[Function]}
        role="button"
        tabIndex="-1"
      >
        Last
      </div>
    </li>
  </ul>
</div>
`;

exports[`<BooksPaginator /> When PageCount is 2 and current page is second page Should render as expected 1`] = `
<div
  className="search-modal__book-paginator"
>
  <ul
    className="book-paginator__navigator"
  >
    <li
      className="book-paginator__navigator-item"
      key="first"
    >
      <div
        className="book-paginator__navigator-item-div"
        onClick={[Function]}
        role="button"
        tabIndex="-1"
      >
        First
      </div>
    </li>
    /
    <li
      className="book-paginator__navigator-item"
      key="prev"
    >
      <div
        className="book-paginator__navigator-item-div"
        onClick={[Function]}
        role="button"
        tabIndex="-1"
      >
        Previous
      </div>
    </li>
    <li
      className="book-paginator__navigator-item"
      key="0"
    >
      <div
        className="book-paginator__navigator-item-div"
        onClick={[Function]}
        role="button"
        tabIndex="-1"
      >
        1
      </div>
    </li>
    <li
      className="book-paginator__navigator-item"
      key="1"
    >
      <div
        className="result"
        tabIndex="-1"
      >
        2
      </div>
    </li>
    <li
      className="book-paginator__navigator-item"
      key="next"
    >
      <div
        tabIndex="-1"
      >
        Next
      </div>
    </li>
    /
    <li
      className="book-paginator__navigator-item"
      key="last"
    >
      <div
        tabIndex="-1"
      >
        Last
      </div>
    </li>
  </ul>
</div>
`;
